--- a/123456/Views/Home/Index.cshtml
+++ b/123456/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 
 <div class="jumbotron">
     <p class="lead">Use our software to relieve the struggle of version control.</p>
-    <div class="alert alert-dismissible alert-success">
+    @*<div class="alert alert-dismissible alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
         <ul class="fa-ul">
@@ -23,7 +23,7 @@
             <li><i class="fa-li fa fa-spinner fa-spin"></i>as bullets</li>
             <li><i class="fa-li fa fa-square"></i>in lists</li>
         </ul>
-    </div>
+    </div>*@
     <p></p>
 </div>
  
